{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 32,
  "lineage": "e72678f2-5003-504c-dfa6-f38d45faedaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03e018e9a64145f24",
            "domain": "vpc",
            "id": "eipalloc-03ca43bcaea5d5019",
            "instance": "i-0290372a583b836f1",
            "network_interface": "eni-0f7bf69010ea777b2",
            "private_dns": "ip-192-168-1-225.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.225",
            "public_dns": "ec2-13-209-216-169.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.216.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http",
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00014daafdc4239f4",
            "arn": "arn:aws:ec2:ap-northeast-2:791055711070:instance/i-0290372a583b836f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0290372a583b836f1",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "my-demo-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7bf69010ea777b2",
            "private_dns": "ip-192-168-1-225.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.225",
            "public_dns": "ec2-13-209-216-169.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.216.169",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07ea89e7db434d586",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0225781effd5bd749",
            "tags": {
              "Name": "http-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0053fa0f0647b76ae",
              "sg-09a370c7dbe8d328e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:791055711070:internet-gateway/igw-03fa2ded4ac2e54b9",
            "id": "igw-03fa2ded4ac2e54b9",
            "owner_id": "791055711070",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0c4ad86cc7630a8ea"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cebbcd65d50916ef",
            "owner_id": "791055711070",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fa2ded4ac2e54b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c4ad86cc7630a8ea"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06732028634c43525",
            "route_table_id": "rtb-0cebbcd65d50916ef",
            "subnet_id": "subnet-0225781effd5bd749"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.http",
            "aws_subnet.http",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:791055711070:security-group/sg-0053fa0f0647b76ae",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0053fa0f0647b76ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": null,
            "owner_id": "791055711070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ad86cc7630a8ea"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:791055711070:security-group/sg-09a370c7dbe8d328e",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a370c7dbe8d328e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "791055711070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ad86cc7630a8ea"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:791055711070:subnet/subnet-0225781effd5bd749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0225781effd5bd749",
            "map_public_ip_on_launch": false,
            "owner_id": "791055711070",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-0c4ad86cc7630a8ea"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:791055711070:vpc/vpc-0c4ad86cc7630a8ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dafc6732b2a59384",
            "default_route_table_id": "rtb-0ec0e4bbcd800611b",
            "default_security_group_id": "sg-0500ad5f1f97c3626",
            "dhcp_options_id": "dopt-fc099d97",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c4ad86cc7630a8ea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ec0e4bbcd800611b",
            "owner_id": "791055711070",
            "tags": {
              "Name": "vpc-http"
            }
          }
        }
      ]
    }
  ]
}